# Unity_UITCar

./: CMakeCache.txt  README.md  cmake_install.cmake
DemoRound2(ForTesting)/: example.py
DemoRound2(ForTesting)/theFxUITCar_Data/: globalgamemanagers  globalgamemanagers.assets  level1  sharedassets0.assets
DemoRound2(ForTesting)/window_version_Data/: globalgamemanagers  globalgamemanagers.assets  level1  output_log.txt
Final_UITCAR/: Final_UITCAR.Editor.csproj  Final_UITCAR.Plugins.csproj  Final_UITCAR.csproj  Final_UITCAR.sln  Result.txt
Final_UITCAR/Assets/: Car.prefab  EndGame.unity  LapTimeManager.prefab  Menu.unity  New Terrain 1.asset  New Terrain 2.asset  New Terrain 3.asset  New Terrain 4.asset  New Terrain 5.asset  New Terrain 6.asset  New Terrain.asset  Round1.unity  Round1_Competition.unity  Round2.unity  Round3.unity  Round3_Test.unity  StartLine.prefab  demoRound2.unity  miniMapRenderTexture.renderTexture
Final_UITCAR/ProjectSettings/: EditorBuildSettings.asset
Final_UITCAR/theFxUITCar_Data/: globalgamemanagers  (+5 more)
ForPython/: autocar.py
MapTest/: CMakeLists.txt  Makefile  README.md
MapTest/Window/window_version_Data/: globalgamemanagers.assets  level0  output_log.txt  resources.assets.resS
MapTest/src/: main.cpp
MapTest/theFxUITCar_Data/: globalgamemanagers  level0  level2
include/: JsonParse.h
src/: JsonParse.cpp  main.cpp
theFxUITCar_Data/: globalgamemanagers  globalgamemanagers.assets  level0  level1  sharedassets0.assets  sharedassets2.assets
window_version_Data/: globalgamemanagers  level1  resources.assets  sharedassets2.assets
(+169 files in other folders)
